# horus-server

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Procfile  README.md  Rocket.toml  RustConfig  fullchain.pem  issue_depkey.rs  privkey.pem  rustfmt.toml
horus-server-derive/: Cargo.toml
horus-server-derive/src/: lib.rs
migrations/2017-08-31-163208_create_users/: down.sql  up.sql
migrations/2017-08-31-165648_fix_users_and_licenses/: up.sql
migrations/2017-09-02-133653_license_key_additions/: up.sql
migrations/2017-09-06-113633_make_license_owner_not_null/: down.sql  up.sql
migrations/2017-09-08-114148_create_image_and_video_tables/: down.sql  up.sql
migrations/2017-09-09-090401_add_date_defaults/: down.sql  up.sql
migrations/2017-09-12-070609_add_default_to_title/: down.sql  up.sql
migrations/2017-09-13-160942_convert_dates_to_datetimes/: down.sql  up.sql
migrations/2017-09-15-125407_create_auth_table/: down.sql  up.sql
migrations/2017-09-19-080607_create_jobs_table/: down.sql  up.sql
migrations/2017-09-22-091040_create_files_table/: down.sql  up.sql
migrations/2017-09-22-102810_add_download_counter_to_file/: down.sql  up.sql
migrations/2018-03-11-175633_create_deployment_keys/: down.sql  up.sql
migrations/2018-03-14-093414_add_fkey_to_depkeys/: down.sql  up.sql
migrations/2018-03-15-105346_create_versions_table/: down.sql  up.sql
migrations/2018-03-15-150926_add_not_null_to/: down.sql  up.sql
migrations/2018-03-16-142856_fix_jobs_table/: down.sql  up.sql
migrations/2018-03-16-145019_fix_default_priority_jobs/: down.sql  up.sql
migrations/2018-03-19-102403_add_logs_to_jobs/: down.sql  up.sql
migrations/2018-03-20-080754_update_pkey_for_versions/: down.sql  up.sql
migrations/2018-03-22-184632_cascade_delete_licenses/: down.sql  up.sql
migrations/2018-04-07-080443_cascade_delete_jobs/: up.sql  (+1 more)
src/: contexts.rs  conv.rs  dbtools.rs  errors.rs  fields.rs  forms.rs  lib.rs  models.rs  schema.rs
static/: prepros-6.config
templates/: changelog.html.hbs  footer.html.hbs  header.html.hbs  image.html.hbs  images.html.hbs  index.html.hbs  manage_account.html.hbs  manage_file.html.hbs  manage_files.html.hbs  manage_image.html.hbs  manage_images.html.hbs  manage_paste.html.hbs  manage_pastes.html.hbs  manage_video.html.hbs  manage_videos.html.hbs  paste.html.hbs  show_file.html.hbs  show_footer.html.hbs  show_header.html.hbs  show_image.html.hbs  show_paste.html.hbs  show_video.html.hbs  video.html.hbs  videos.html.hbs
tests/: mod.rs
(+67 files in other folders)
