[package]
name = "horus_server"
version = "0.1.0"
authors = ["Nicholas Donnelly <nick@donnelly.cc>"]

[dependencies]
rocket = { version = "0.3.6", features = ["tls"] }
rocket_codegen = "0.3.6"
diesel = { version = "1.0.0", features = ["chrono", "postgres"] }
diesel_infer_schema = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.10.*"
dotenv_macros = "0.10.*"
r2d2-diesel = "*"
r2d2 = "*"
serde = "1.0"
serde_json = "*"
serde_derive = "1.0"
regex = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.3"
base64 = "0.6.0"
time = "0.1"
rust-s3 = "0.5.0"
bcrypt = "0.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "json"]
